package ar.net.mgardos.vsfridge.core;

import lombok.Getter;

@Getter
public class Food extends Product {
	private Long expirationDate;
}
