package ar.net.mgardos.vsfridge.core.label;

public interface SmartFridgeLabeler {
	void identifyFrom();
}
